Delay reload and msg, search z-index and realstate fix

--- a/static/css/myCss.css
+++ b/static/css/myCss.css
@@ -17,12 +17,12 @@ background: linear-gradient(10deg, rgba(232,232,202,1) 18%, rgba(255,255,255,1) 
 }
 .display-3{
   font-size: 4vw;
-position: absolute;
-text-shadow:  2px 2px 5px grey;
-top: 0;
-left: 20%;
-z-index: 99;
-margin: 0 0 0 0;
+  position: absolute;
+  text-shadow:  2px 2px 5px grey;
+  top: 0;
+  left: 20%;
+  z-index: 99;
+  margin: 0 0 0 0;
 }
 .tab-pane:nth-of-type(3){
   display: none;
@@ -74,6 +74,7 @@ background: linear-gradient(300deg,
 #reviewCont{
   /* min-width: 50%; */
   flex: 50%;
+  line-height: 30px;
   transform: scale(1.2);
   box-sizing: border-box;
   max-height: 50vh;
@@ -245,7 +246,8 @@ select{
 }
 /* preserves bgcolor when hidding def*/
 #dvPcombHint{
-  height: 25px;
+  margin-top: 20px;
+  height: 33px;
   overflow: hidden;
   background-color: rgb(255, 255, 255, 0.3);
 }
@@ -367,7 +369,10 @@ select{
   }
   #reviewCont{
     margin-top: 52px;
-    min-height: 465px;
+    min-height: 510px;
+  }
+  #pronReview{
+    margin-top: 20px;
   }
   #sentReview{
     display: none;
@@ -389,7 +394,7 @@ select{
     margin: 50px 2% 0 0;
     color: #007bff;
     font-weight: bolder;
-    min-height: 462px;
+    min-height: 510px;
   }
   /*same as #searchCont, but this syncs with bootstrap specificty*/
   .tab-content > .active {
@@ -507,7 +512,7 @@ select{
 
 #links iframe{
   width: 100%; 
-  height: 100vh
+  height: 78vh
 }
 #navLinks{
   margin-top: 0;
@@ -517,6 +522,7 @@ select{
 }
 #nav{
   background-color: white;
+  z-index: 99;
 }
 #nav li{
   width: 100px;
